# cpp-project-template

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .cmake-format.py  .commitlintrc.js  .conanrc  .cz.yaml  .editorconfig  .gersemirc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .releaserc.js  CHANGELOG.md  CMakeLists.txt  CONRIBUTING.md  Pipfile  README.md  conanfile.py  conanfile.txt  gcovr.cfg  main.cpp  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/workflows/: check-history.yml  ci.yml  codeql.yml  commitlint.yml  graphql.yml  pre-commit.yml  semver.yml
cmake/: cache.cmake  clang-12.cmake  clang-13.cmake  clang.cmake  defaults.cmake  gcc-10.cmake  gcc-11.cmake  gcc-12.cmake  gcc-9.cmake  gcc.cmake  msvc.cmake  static-analyzers.cmake  warnings.cmake
conan/: clang-12  clang-13  clang-14  clang-15  clang14  clang15  clang16  clang17  clang18  clang19  clang20  clang21  clang22  cppstd  gcc-11  gcc-12  gcc12  gcc13  gcc14  gcc15  gcc16  msvc193-mdd  msvc193-mt  msvc194-md  msvc194-mdd  msvc194-mt  msvc194-mtd  msvc195-md  msvc195-mdd  msvc195-mt  msvc195-mtd  vs-17-md  vs-17-mdd  vs-17-mt  vs-17-mtd
lib/: CMakeLists.txt
lib/coro/: CMakeLists.txt
lib/coro/include/coro/: awaitable_traits.hpp  coro.hpp  io_service.hpp  queue.hpp  scoped_lambda.hpp  sync_wait.hpp  task.hpp  when_all_ready.hpp
lib/math/: CMakeLists.txt
lib/math/include/math/: math.hpp
src/: CMakeLists.txt  main.cpp
src/lib/math/: CMakeLists.txt
src/lib/math/include/math/: math.hpp
test/: CMakeLists.txt
test/math/: CMakeLists.txt  math-test.cpp
