[project]
name = "cpp-project-template"
version = "0.0.0"
description = ""
authors = [
  { name = "Your Name", email = "<you@example.com>" },
]
license = "Unlicense"
readme = "README.md"

requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "conan",
    "gcovr",
    "ninja",
    "pre-commit",
    "clang-format",
    "cmake>=4.1.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
