[project]
name = "cpp-project-template"
version = "0.0.0"
description = ""
authors = [
  { name = "Your Name", email = "<you@example.com>" },
]
license = "Unlicense"
readme = "README.md"

requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "conan",
    "gcovr",
    "ninja",
    "pre-commit",
    "clang-format",
#TODO: remove version after https://github.com/scikit-build/cmake-python-distributions/issues/692
    "cmake==4.3.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
